[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotuer"
version = "0.0.0"
# description = "A short description of your project"
# authors = [{ name = "Your Name", email = "your.email@example.com" }]
# license = { text = "" }
# dependencies = ["requests >= 2.23.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
